# imf-data-mcp

./: README.md  imf_data_mcp.py  pyproject.toml  server.py
imf_data_mcp/resources/areas/: cpis.json  fsi.json  ifs.json  mfs.json
imf_data_mcp/resources/indicators/: bop.json  cpis.json  fsi.json  gfsmab.json  ifs.json  mfs.json
imf_data_mcp/resources/sectors/: cpis.json
resources/areas/: bop.json  cdis.json  dot.json  gfsmab.json
resources/indicators/: cdis.json  dot.json
resources/sectors/: gfsmab.json
