[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imf-data-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.1",
    "requests>=2.32.3",
]

[project.scripts]
imf-data-mcp = "imf_data_mcp:main"
